# streamlit-template

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/: Home.py
src/pages/: 1_Demo.py  2_Deploy.py
src/schemas/: chads_vasc_score.py
src/utils/: data_loader.py
